# MOKG-HGNN

./: .gitignore  LICENSE  Makefile  Makefile-mognntf  README.md  README___.md  ablation.sh  docs_pipeline_overview.md  environment.yml  experiments.sh  make_graph.sh  prepare_data.sh  pyproject.toml  redo_g700.sh  run_feature_collapse.sh  setup_env.sh  train_and_eval.sh  train_best_models.sh  tune.sh  tune_all.sh
bat_scripts/: README.md  collapse_mokghgnn.bat  make_graph.bat  prepare_data.bat  run_feature_collapse.bat  setup_env.bat  train_and_eval.bat  tune.bat  tune_all.bat
bat_scripts/helpers/: collapse_mokghgnn.py  train_and_eval.py
benchmark/: README.md  run_tests.py
benchmark/MOGAT-main/: get_dataset.py  mogat1.py  mogat1_commented.py  mogat2.py
benchmark/MOGONET/: feat_importance.py  get_dataset.py  (+5 more)
configs/: _collapse_smoke.yml  _sched_smoke.yml  _smoke_kg_hgnn.yml  best_model_config.yml  best_model_config_optimized.yml  config.yml  config_final.yml  config_kg_hgnn.yml  config_kg_hgnn_fast.yml  config_kg_hgnn_hgt.yml  config_kg_hgnn_rgcn.yml  config_kg_hgnn_sage.yml  sweep_baseline.yml  sweep_baseline_smoke.yml  sweep_genes.yml  sweep_genes_smoke.yml  sweep_sampler.yml  sweep_sampler_smoke.yml  sweep_split_ratio.yml  sweep_split_ratio_smoke.yml  sweep_split_stability.yml  sweep_tf.yml  sweep_tf_smoke.yml
paper/: manuscript_v2.5.tex  table_per_class_mognn-tf.csv  table_per_class_mognn-tf.tex
scripts/: README.md  collapse_mognntf.py  collect_results.py  download_pancan.py  download_pkt.py  run_optuna.py  run_split_stability.py  run_sweep.py  train.py
(+96 files in other folders)
